# map-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md
.github/workflows/: ci.yml  component-artifacts.yml
docs/: README.md  forge-cli-operator-guide.md  map-cli-operator-guide.md
scripts/: package_component.py  package_host_component.py
src/: main.rs
templates/: map-deploy.yml
tests/: cli_token_hygiene.rs
tests/fixtures/map-deploy-review-contract/: cases.yml
