[package]
name = "map-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Thin MAP client for Aegis.app"
repository = "https://github.com/mithran-hq/map-cli"

[[bin]]
name = "map"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
map-deploy-review-contract = { git = "https://github.com/mithran-hq/map-deploy-review-contract", rev = "bbdbe022d2f1a9780924193313b7d26cab014fc6" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
